fixed alignment issues

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -15,6 +15,7 @@
     display: flex;
     flex-direction: column;
     gap: 40px;
+    padding-bottom: 400px;
 }
 
 
@@ -98,6 +99,7 @@ nav{
         display: flex;
         flex-direction: column;
         gap: 40px;
+        padding-bottom: 100px;
     }
 
 
